Regression: fix margin/padding on input in header for language overlay
Clicking language opens an overlay where the input
currently spills out the page

--- a/less/common/mf-navigation.less
+++ b/less/common/mf-navigation.less
@@ -332,11 +332,10 @@ html.overlay {
 	min-height: @headerHeight;
 	margin: 0;
 	padding-bottom: 0;
+	padding-right: 8px;
 
 	input.search {
 		margin-top: 0;
-		margin-right: @searchBarPaddingRight;
-		margin-left: @searchBoxMarginLeft;
 	}
 
 	h2 {
